Fixed bg-img z-index issue

--- a/src/styles/Banner.module.css
+++ b/src/styles/Banner.module.css
@@ -11,6 +11,7 @@
 .Banner-Text {
   width: 60%;
   color: hsl(13, 100%, 96%);
+  z-index: 1;
 }
 
 .Banner-Text + button {
